Tweaks to get the gui working better on smaller monitors. 1. Ensured the data table view can be horizontally scrolled when overflows in x direction. 2. Ensured map button doesn;t obsure the right button for the tab group when the creen width is less than the width of the tab button header.

--- a/SmartEnergyLabGui/ClientApp/src/app/loadflow/data/loadflow-data/loadflow-data.component.css
+++ b/SmartEnergyLabGui/ClientApp/src/app/loadflow/data/loadflow-data/loadflow-data.component.css
@@ -9,17 +9,22 @@ div.mapButton > div {
     width: 35px;
     height: 35px;
     padding: 5px;
-    opacity: 0.5;
     z-index: 2000; /* needed to prevent being covered by the tab control and mouse over title of the paginator */
+    background-color: white;
 }
 
-div.mapButton > div:hover {
+div.mapButton > div > img:hover {
     cursor:pointer;
     opacity: 1;
 }
 
 div.mapButton > div > img {
     width: 100%;
+    opacity: 0.5;
+}
+
+div.mapButton > div.offset {
+    right: 40px;
 }
 
 .hide {
