--- a/SmartEnergyLabGui/ClientApp/src/styles.css
+++ b/SmartEnergyLabGui/ClientApp/src/styles.css
@@ -274,9 +274,6 @@ table.dataTable {
     width: 100%;
 }
 
-table.dataTable  {
-
-}
 
 /* */
 .cellLink {
